Added Hero Section

--- a/index.html
+++ b/index.html
@@ -38,7 +38,19 @@
       </div>
     </nav>
     <!--nav bar ending-->
-
+    <div class="main">
+      <div class="main__container">
+        <div class="main__content">
+          <h1>NEXT GENERATION</h1>
+          <h2>TECHNOLOGY</h2>
+          <p>See what makes us different.</p>
+          <button class="main__btn"><a href="/">Get Started</a></button>
+        </div>
+        <div class="main__image--container">
+          <img src="media/pic1.svg" alt="pic" id="main__img" />
+        </div>
+      </div>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
