Added Styling Hero (& media queries)

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc"
       crossorigin="anonymous"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -44,13 +48,16 @@
           <h1>NEXT GENERATION</h1>
           <h2>TECHNOLOGY</h2>
           <p>See what makes us different.</p>
-          <button class="main__btn"><a href="/">Get Started</a></button>
+          <button class="main__btn">
+            <a href="/">Get Started</a>
+          </button>
         </div>
         <div class="main__image--container">
           <img src="media/pic1.svg" alt="pic" id="main__img" />
         </div>
       </div>
     </div>
+    <!--hero ending-->
     <script src="index.js"></script>
   </body>
 </html>
