--- a/index.html
+++ b/index.html
@@ -58,6 +58,22 @@
       </div>
     </div>
     <!--hero ending-->
+    <div class="services">
+      <h1>See what the hype is about</h1>
+      <div class="services__container">
+        <div class="services__card">
+          <h2>Experience Bliss</h2>
+          <p>AI Power Technology</p>
+          <button>Get Started</button>
+        </div>
+        <div class="services__card">
+          <h2>Are you ready?</h2>
+          <p>Take a leap</p>
+          <button>Get Started</button>
+        </div>
+      </div>
+    </div>
+    <!--services ending-->
     <script src="index.js"></script>
   </body>
 </html>
