--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <div class="social__media">
         <div class="social__media--wrap">
           <div class="footer__logo">
-            <a href="/" id="footer__logo"><i class="fas faa-gem"></i>NEXT</a>
+            <a href="/" id="footer__logo"><i class="fas fa-gem"></i>NEXT</a>
           </div>
           <p class="website__rights">&copy; NEXT 2020. All rights reserved.</p>
           <div class="social__icons">
