--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
   <body>
     <nav class="navbar">
       <div class="navbar__container">
-        <a href="#" id="navbar__logo"><i class="fas fa-gem"></i>NEXT</a>
+        <a href="/index.html" id="navbar__logo"
+          ><i class="fas fa-gem"></i>NEXT</a
+        >
         <div class="navbar__toggle" id="mobile-menu">
           <span class="bar"></span>
           <span class="bar"></span>
@@ -27,7 +29,7 @@
         </div>
         <ul class="navbar__menu">
           <li class="navbar__item">
-            <a href="#" class="navbar__link">Home</a>
+            <a href="/index.html" class="navbar__link">Home</a>
           </li>
           <li class="navbar__item">
             <a href="/tech.html" class="navbar__link">Tech</a>
